--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ google-auth==2.40.3
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.4
+gunicorn==23.0.0
 httplib2==0.31.0
 idna==3.10
 itsdangerous==2.2.0
@@ -20,9 +21,11 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 numpy==2.3.3
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.2
 proto-plus==1.26.1
 protobuf==6.32.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.5
